--- a/platformio.ini
+++ b/platformio.ini
@@ -1,14 +1,27 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:esp32-s3-devkitc-1]
+[env:esp32-s3-transmitter]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
+
+; 1. CẤU HÌNH PHẦN CỨNG S3-N16R8
+; Chế độ bộ nhớ: QIO cho Flash, OPI cho PSRAM (Bắt buộc cho R8)
+board_build.arduino.memory_type = qio_opi
+
+; Khai báo dung lượng Flash 16MB
+board_upload.flash_size = 16MB
+board_build.partitions = default_16MB.csv
+
+; Tốc độ truy xuất Flash cao nhất (80MHz)
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
+
+; 2. Build Flags
+build_flags = 
+    -DBOARD_HAS_PSRAM              ; Kích hoạt 8MB RAM
+    -mfix-esp32-psram-cache-issue  ; Fix lỗi cache PSRAM
+    -DARDUINO_USB_MODE=1           ; Chế độ USB Native
+    -DARDUINO_USB_CDC_ON_BOOT=1    ; In Serial ngay khi khởi động
+
+; 3. CẤU HÌNH NẠP & MONITOR
+monitor_speed = 115200
+upload_speed = 921600
